src/test/resources/purescript_examples/passing/TypeWildcardsRecordExtension.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n    \n')
      PureASTWrapperElement(TypeDeclaration)
        PsiElement(identifier)('foo')
        PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Type)
          PureASTWrapperElement(TypeAtom)
            PureASTWrapperElement(ForAll)
              PsiElement(forall)('forall')
              PsiElement(whitespace)(' ')
              PsiElement(identifier)('a')
              PsiElement(.)('.')
              PsiElement(whitespace)(' ')
              PureASTWrapperElement(ConstrainedType)
                PureASTWrapperElement(Type)
                  PureASTWrapperElement(TypeAtom)
                    PureASTWrapperElement(ObjectType)
                      PsiElement({)('{')
                      PureASTWrapperElement(Row)
                        PureASTWrapperElement(identifier)
                          PsiElement(identifier)('b')
                        PsiElement(whitespace)(' ')
                        PsiElement(::)('::')
                        PsiElement(whitespace)(' ')
                        PureASTWrapperElement(Type)
                          PureASTWrapperElement(TypeAtom)
                            PureASTWrapperElement(TypeConstructor)
                              PureASTWrapperElement(Qualified)
                                PsiElement(proper name)('Number')
                                PsiElement(whitespace)(' ')
                        PsiElement(|)('|')
                        PsiElement(whitespace)(' ')
                        PureASTWrapperElement(TypeVar)
                          PsiElement(identifier)('a')
                      PsiElement(})('}')
                      PsiElement(whitespace)(' ')
                  PsiElement(->)('->')
                  PsiElement(whitespace)(' ')
                  PureASTWrapperElement(Type)
                    PureASTWrapperElement(TypeAtom)
                      PureASTWrapperElement(ObjectType)
                        PsiElement({)('{')
                        PureASTWrapperElement(Row)
                          PureASTWrapperElement(identifier)
                            PsiElement(identifier)('b')
                          PsiElement(whitespace)(' ')
                          PsiElement(::)('::')
                          PsiElement(whitespace)(' ')
                          PureASTWrapperElement(Type)
                            PureASTWrapperElement(TypeAtom)
                              PureASTWrapperElement(TypeConstructor)
                                PureASTWrapperElement(Qualified)
                                  PsiElement(proper name)('Number')
                                  PsiElement(whitespace)(' ')
                          PsiElement(|)('|')
                          PsiElement(whitespace)(' ')
                          PsiElement(identifier)('_')
                        PsiElement(})('}')
                        PsiElement(whitespace)('\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('foo')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('f')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PsiElement(identifier)('f')
                PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Debug')
                  PsiElement(.)('.')
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Trace')
                  PsiElement(.)('.')
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
